--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,20 @@ body {
   align-items: center;
   justify-content: center;
   font-family: "Courier New", Courier, monospace;
+  text-align: center;
 }
 
 #canvas {
   border-radius: 5px;
   background-color: #f0f0f0;
+}
+
+#container {
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+}
+
+.score {
+  padding: 10px;
 }
